mlops/k8s/contour-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mlops-poc-gateway
  namespace: mlops-poc
spec:
  gatewayClassName: contour
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: failure-model-api-route
  namespace: mlops-poc
spec:
  parentRefs:
    - name: mlops-poc-gateway
  hostnames:
    - failure-model-api.mlops.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: failure-model-api
          port: 80
          weight: 100
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mlflow-route
  namespace: mlops-poc
spec:
  parentRefs:
    - name: mlops-poc-gateway
  hostnames:
    - mlflow.mlops.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mlflow
          port: 5000
          weight: 100
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console-route
  namespace: mlops-poc
spec:
  parentRefs:
    - name: mlops-poc-gateway
  hostnames:
    - minio-console.mlops.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minio
          port: 9001
          weight: 100
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-s3-route
  namespace: mlops-poc
spec:
  parentRefs:
    - name: mlops-poc-gateway
  hostnames:
    - minio-s3.mlops.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minio
          port: 9000
          weight: 100
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: failure-model-kserve-route
  namespace: mlops-poc
spec:
  parentRefs:
    - name: mlops-poc-gateway
  hostnames:
    - failure-model-kserve.mlops.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: failure-model-predictor
          port: 80
          weight: 100
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: failure-model-kserve-v2-api-host-route
  namespace: mlops-poc
spec:
  parentRefs:
    - name: mlops-poc-gateway
  hostnames:
    - failure-model-api.mlops.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v2
      backendRefs:
        - name: failure-model-predictor
          port: 80
          weight: 100
